--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
                 <input name="Gamename" placeholder="Game name" class="list-games" /> <br />
                 <input name="Genre" placeholder="Genre" class="list-games" /> <br />
                 <input name="Year" placeholder="Year of release" class="Year-games"/> <br />
-                <input name="Platform" placeholder="PC PS5 XBOX" class="pt-games"/><br />
+                <input name="Platform" placeholder="PC PS5 XBOX" class="pt-games"/><br />                    
+                  <br />                  
+                 <h4>Additional options</h4>
+              <label>
+                <input name="on_offer" type="checkbox" /> On offer
+              </label>
+
+              <label>
+                <input name="recent_release" type="checkbox" /> Recent release
+              </label>
 
                 <button type="submit">Submit</button>
               </form>
