--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                  <br />
 
                  <h4>Additional options</h4>
-                <input name="Platform" placeholder="PC PS5 XBOX" class="pt-games"/><br />                    
+                <input name="Platform" placeholder="PC PS5 XBOX" class="pt-games"/><br />
                   <br />
                  <h4>Additional options</h4>
               <label>
@@ -32,6 +32,10 @@
 
               <label>
                 <input name="recent_release" type="checkbox" /> Recent release
+              </label>
+
+              <label>
+                <input name="Physical_copy" type="checkbox" /> Physcial copy
               </label>
 
                 <button type="submit">Submit</button>
