--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
       </head>
 
       <body>
+        <center>
           <header>
             <h1>One place for all your games</h1>
             <h3>Get the latest and hottest games that is avaiable in the market</h3>
           </header>
+        </center>
 
           <main>
-
+            <center>
             <section id="contact-form">
-              <h2>Search game</h2>
+            <h2>Search game</h2>
+              <img src="C:\Users\likith\Downloads\Game1.jpeg" width="200" />
               <form method="GET" action="Games-search.php">
 
                 <input name="Gamename" placeholder="Game name" class="list-games" /> <br />
@@ -22,7 +25,7 @@
 
                  <br />
 
-                 <h4>Additional options</h4>              
+                 <h4>Additional options</h4>
               <label>
                 <input name="on_offer" type="checkbox" /> On offer
               </label>
@@ -38,6 +41,7 @@
                 <button type="submit">Submit</button>
               </form>
             </section>
+          </center>
 
                 <footer>
                   <center>&copy; 2026<br />
