Added Iamges folders and updated index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <center>
             <section id="contact-form">
             <h2>Search game</h2>
-              <img src="C:\Users\likith\Downloads\Game1.jpeg" width="200" />
-              <form method="GET" action="Games-search.php">
+              <img src="Images/Game1.jpeg" width="200" />
+              <form method="GET" action="Games-search.php"><br />
 
                 <input name="Gamename" placeholder="Game name" class="list-games" /> <br />
                 <input name="Genre" placeholder="Genre" class="list-games" /> <br />
