Made some changes to index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <input name="Platform" placeholder="PC PS5 XBOX" class="pt-games"/><br />
 
                  <br />
+                 <input name="Copytype" type="radio" value="Physical" /> Physical copy
+                 <input name="Copytype" type="radio" value="Digital" /> Digital copy
+                 <br />
 
                  <h4>Additional options</h4>
               <label>
