added video to index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <center>
             <section id="contact-form">
             <h2>Search games</h2>
-              <img src="Images/Game1.jpeg" width="200" />
+              <img src="./Images/Game1.jpeg" width="200" />
               <form method="GET" action="Games-search.php"><br />
 
                 <input name="Gamename" placeholder="Game name" class="list-games" /> <br />
@@ -57,6 +57,12 @@
                 <br />
 
               </form>
+            </section>
+
+            <section>
+              <video width="480" height="320" controls>
+                <source src="./Videos/video1.mp4" type="video/mp4">
+              </video>
             </section>
           </center>
 
