--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <center>
             <section id="contact-form">
             <h2>Search games</h2>
-              <img src="./Images/Game1.jpeg" width="200" />
+              <img src="./Images/Game1.jpeg" alt="Game Image" width="200" />
               <form method="GET" action="Games-search.php"><br />
 
                 <input name="Gamename" placeholder="Game name" class="list-games" /> <br />
@@ -45,10 +45,10 @@
                 <h4>Number of copies</h4>
                 <select name="Numberofcopies">
                   <option value="1">1 - $3.99</option>
-                  <option value="1">2 - $5.99</option>
-                  <option value="1">3 - $7.99</option>
-                  <option value="1">4 - $8.99</option>
-                  <option value="1">5 - $9.99</option>
+                  <option value="2">2 - $5.99</option>
+                  <option value="3">3 - $7.99</option>
+                  <option value="3">4 - $8.99</option>
+                  <option value="4">5 - $9.99</option>
                 </select>
 
                 <br />
@@ -62,8 +62,17 @@
             <section>
               <video width="480" height="320" controls>
                 <source src="./Videos/video1.mp4" type="video/mp4">
+                <source src="./Videos/video1.mp4" type="video/mp4">
+                Your browser does not support HTML5.
               </video>
             </section>
+
+            <section>
+              <audio width="600" controls>
+                <source src="./audio/Audio1.mp3" type="audio/mp3">
+              </audio>
+            </section>
+            
           </center>
 
                 <footer>
